# zig_deps

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
zig_deps/: __init__.py  main.py
